# reader-harvester

./: README.md  setup.cfg  setup.py
hvr/: __init__.py  hvr.py
hvr/commands/: __init__.py
reader_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
