[metadata]
name = reader-harvester
version = 0.0.1
author = Eric Lease Morgan
author_email = emorgan@nd.edu
description = A command-line interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ericleasemorgan/reader-harvester
project_urls = Bug Tracker = https://github.com/ericleasemorgan/reader-harvester/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
